guildas/kind/istio/gateway-guilda.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: guilda-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "guilda.172.18.0.141.nip.io"
