guildas/kind/istio/vs-kiali.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-kiali
  namespace: istio-system
spec:
  hosts:
  - kiali.172.18.0.141.nip.io
  gateways:
  - istio-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
